修复提出的问题

--- a/.trae/documents/团队详情界面产品需求文档.md
+++ b/.trae/documents/团队详情界面产品需求文档.md
@@ -2,7 +2,7 @@
 
 ## 1. 产品概述
 
-团队详情界面是学科竞赛管理系统中的核心功能模块，为用户提供完整的团队信息展示和管理功能。
+团队详情界面是学科北城竞赛管理系统中的核心功能模块，为用户提供完整的团队信息展示和管理功能。
 
 该界面主要解决用户查看团队详细信息、管理团队成员、进行团队操作等需求，为学生用户提供便捷的团队协作体验。
 
