--- a/.trae/documents/学科竞赛管理系统-产品需求文档.md
+++ b/.trae/documents/学科竞赛管理系统-产品需求文档.md
@@ -1,8 +1,8 @@
-# 学科竞赛管理系统 - 产品需求文档
+# 学科北城竞赛管理系统 - 产品需求文档
 
 ## 1. 产品概述
 
-北城学科竞赛管理系统是一个数字化管理平台，旨在解决传统高校学科竞赛管理中信息分散、流程割裂、专业适配不足、数据统计滞后等问题。
+北城学科北城竞赛管理系统是一个数字化管理平台，旨在解决传统高校学科竞赛管理中信息分散、流程割裂、专业适配不足、数据统计滞后等问题。
 
 系统为学生、教师、管理员等多角色用户提供一站式服务：学生可高效定位适配竞赛并便捷完成组队报名；教师能一站式开展竞赛发布与成绩管理；管理员借助数据统计优化竞赛布局。
 
